--- a/travis_lib_template.yml
+++ b/travis_lib_template.yml
@@ -2,121 +2,113 @@ language: python
 
 env:
   global:
-    - FILENAME=filename_placeholder
-    - CACHEDIR=mycache
+    - CACHEDIR=~/mycache
     - UTILS=${CACHEDIR}/PVBV_utils
+    - ACEDIR=${CACHEDIR}/ace
+    - H5DIR=${CACHEDIR}/h5
     - FC='gfortran-5'
-    - NJOY_TOLER=0.1   # Reconstruction tolerance
-    - NJOY_TEMP=293.6  # Processing temperature (K)
-    - NJOY_EMAX=10     # Maximum energy for thermal treatment (eV)
-    - NJOY_ACE_SUFF=03 # ACE file suffix
-
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - gfortran-5
-      - xsltproc
+    - PYTHONPATH="${UTILS}/openmc:$PYTHONPATH"
+    - OPENMC_CROSS_SECTIONS=${H5DIR}/cross_sections.xml
 
 python:
   - "3.6"
-
-before_install:
-  - pip install "pandas>=0.23"
 
 cache:
   directories:
     - ${CACHEDIR}
 
-branches:
-  except:
-    - gh-pages
-
 stages:
-  - cache
-  - parse
-  - utils
-  - processing
-  - inter
-  - deploy
+  - setup
+  - ace
+  - hdf5
+  - run
 
 jobs:
   include:
 
-    - stage: cache
+    - stage: setup
       name: setup cache directory
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - gfortran-5
+            - gcc-5
+            - g++-5
+            - cmake
+            - libhdf5-dev
       install:
         - rm -rf ${CACHEDIR}
-        - mkdir -p ${CACHEDIR}/html
-        - "echo \"$TRAVIS_BUILD_ID\" | tee ${CACHEDIR}/travis_build_id"
-        - "echo 'theme: jekyll-theme-cayman' > ${CACHEDIR}/html/_config.yml"
+        - mkdir -p ${CACHEDIR} ${ACEDIR} ${H5DIR}
         - ( cd ${CACHEDIR} && git clone https://github.com/luca-fiorito-11/PVBV_utils.git )
+        - ( cd ${CACHEDIR} && git clone https://github.com/luca-fiorito-11/benchmarks.git )
+        - ( cd ${UTILS} && ./install_openmc.sh )
+        - mkdir -p ${UTILS}/openmc/build && cd ${UTILS}/openmc/build
+        - h5cc -showconfig
+        - "export LD_LIBRARY_PATH=$(h5cc -showconfig | grep \"Installation point\" | cut -d: -f2 | xargs)"
+        - "export HDF5_ROOT=$(h5cc -showconfig | grep \"Installation point\" | cut -d: -f2 | xargs)"
+        - cmake -DCMAKE_CXX_COMPILER=$(which g++-5) ..
+        - make
       script: skip
 
 
-    - stage: parse
-      name: openmc
+    - stage: ace
+      name: get ACE files
+      script: bash ${UTILS}/get_releases.sh
+
+
+    - stage: hdf5
+      name: h5
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - gfortran-5
+            - gcc-5
+            - g++-5
+            - libhdf5-dev
       install:
-        - bash ${UTILS}/install_openmc.sh
-        - export PYTHONPATH="openmc:${PYTHONPATH}"
+        - pip install pandas h5py scipy uncertainties
       script:
-        - python ${UTILS}/openmc_to_html.py $FILENAME > ${CACHEDIR}/html/index.html
+        - "export LD_LIBRARY_PATH=$(h5cc -showconfig | grep \"Installation point\" | cut -d: -f2 | xargs)"
+        - "export HDF5_ROOT=$(h5cc -showconfig | grep \"Installation point\" | cut -d: -f2 | xargs)"
+        - python ${UTILS}/add_ace_openmc.py ${ACEDIR} -d ${H5DIR} --libver "earliest"
 
 
-    - stage: utils
-      name: fizcon
-      install: bash ${UTILS}/install_fizcon.sh
-      script: echo -e "$FILENAME\nFIZCON.OUT\n\nDONE" |./fizcon-linux-64
+    - stage: run
+      name: pu-met-fast-001
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - gfortran-5
+            - gcc-5
+            - g++-5
+            - libhdf5-dev
+            - hdf5-tools
+      script:
+        - chmod 777 ${H5DIR}/*
+        - "export LD_LIBRARY_PATH=$(h5cc -showconfig | grep \"Installation point\" | cut -d: -f2 | xargs)"
+        - "export HDF5_ROOT=$(h5cc -showconfig | grep \"Installation point\" | cut -d: -f2 | xargs)"
+        - ( cd ${CACHEDIR}/benchmarks/icsbep/pu-met-fast-001/openmc && ${UTILS}/openmc/build/bin/openmc )
 
-    - stage: utils
-      name: checkr
-      install: bash ${UTILS}/install_checkr.sh
-      script: echo -e "$FILENAME\nCHECKR.OUT\n\nDONE" | ./checkr-linux-64
-
-    - stage: utils
-      name: psyche
-      install: bash ${UTILS}/install_psyche.sh
-      script: echo -e "$FILENAME\nPSYCHE.OUT\n\nDONE" | ./psyche-linux-64
-
-
-    - stage: processing
-      name: njoy
-      install: bash ${UTILS}/install_njoy.sh
-      script: 
-        - bash ${UTILS}/run_njoy.sh $FILENAME
-        - mv ${FILENAME}.ace ${FILENAME}.pendf ${CACHEDIR}/
-        - xsltproc ${UTILS}/njoy_to_html.xsl <( ${UTILS}/parse_njoy_messages.sh output ) | sed '1d;$d' > ${CACHEDIR}/html/njoy_output.html
-#        - git tag "$(date +'%Y%m%d')-$(git log --format=%h -1)-$(git log --format=%an -1 | tr " " "-")"
-
-
-    - stage: inter
-      name: inter
-      install: bash ${UTILS}/install_inter.sh
-      script: 
-        - echo -e "${CACHEDIR}/${FILENAME}.pendf\nINTER.OUT\n\nDONE" | ./inter-linux-64
-        - python ${UTILS}/inter_to_html.py <(sed '1,/^Material number/d' INTER.OUT | sed '2d') > ${CACHEDIR}/html/inter_output.html
-
-
-    - stage: deploy
-      name: deploy
-      script: skip
-      deploy:
-
-        - provider: releases
-          tags: true
-          api-key: $GITHUB_TOKEN
-          file:
-            - ${CACHEDIR}/${FILENAME}.ace 
-            - ${CACHEDIR}/${FILENAME}.pendf 
-          skip_cleanup: true
-
-        - provider: pages
-          on:
-            branch:
-              master
-          skip-cleanup: true
-          github-token: $GITHUB_TOKEN
-          keep-history: true
-          local-dir: ${CACHEDIR}/html
-          overwrite: yes
+    - stage: run
+      name: pu-met-fast-002
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - gfortran-5
+            - gcc-5
+            - g++-5
+            - libhdf5-dev
+            - hdf5-tools
+      script:
+        - chmod 777 ${H5DIR}/*
+        - "export LD_LIBRARY_PATH=$(h5cc -showconfig | grep \"Installation point\" | cut -d: -f2 | xargs)"
+        - "export HDF5_ROOT=$(h5cc -showconfig | grep \"Installation point\" | cut -d: -f2 | xargs)"
+        - ( cd ${CACHEDIR}/benchmarks/icsbep/pu-met-fast-002/openmc && ${UTILS}/openmc/build/bin/openmc )
